<?xml version="1.0"?>
<package>
  <name>morse</name>
  <version>1.4.1</version>
  <description>The morse package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <url type="website">http://www.strands-project.eu</url>
  <url type="repository">https://github.com/strands-project/strands_morse</url>
  <url type="bugtracker">https://github.com/strands-project/strands_morse/issues</url>


  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>blender</build_depend>
  <build_depend>python3</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>blender</run_depend>
  <run_depend>python3</run_depend>
  <run_depend>python3-numpy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>
      cmake
    </build_type>
  </export>
</package>
